--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
 	"description": "inwewallet",
 	"main": "main.js",
 	"scripts": {
-		"dev":
-			"concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"cross-env NODE_ENV=production webpack --watch\"",
+		"dev": "concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"cross-env NODE_ENV=production webpack --watch\"",
 		"compile": "webpack --config webpack.config.js --progress --profile",
-		"postinstall":
-			"electron-builder install-app-dep && webpack  --progress --profile --config webpack.dll.config.js",
+		"postinstall": "electron-builder install-app-dep && webpack  --progress --profile --config webpack.dll.config.js",
 		"pack": "electron-builder --dir",
 		"dist": "webpack --config webpack.dll.config.js && electron-builder",
-		"dist1":
-			"webpack --config webpack.dll.config.js&& webpack && electron-builder"
+		"dist1": "webpack --config webpack.dll.config.js&& webpack && electron-builder"
 	},
 	"build": {
 		"appId": "com.electron.inwecrypto",
-		"files": ["./main.js", "resources/index.html", "resources/"],
+		"files": [
+			"./main.js",
+			"resources/index.html",
+			"resources/"
+		],
 		"dmg": {
 			"contents": [
 				{
@@ -32,7 +33,10 @@
 			]
 		},
 		"linux": {
-			"target": ["AppImage", "deb"]
+			"target": [
+				"AppImage",
+				"deb"
+			]
 		},
 		"win": {
 			"target": "nsis",
@@ -58,7 +62,6 @@
 		"react-css-modules": "^4.7.1",
 		"react-dev-utils": "^4.2.1",
 		"react-dom": "^16.2.0",
-		"react-grid-layout": "^0.16.0",
 		"react-hot-loader": "^1.3.1",
 		"react-i18next": "^7.3.1",
 		"react-magic": "^0.2.3",
@@ -66,12 +69,10 @@
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
 		"react-router-redux": "next",
-		"react-slick": "^0.16.0",
 		"redux": "^3.7.2",
 		"redux-actions": "^2.2.1",
 		"redux-devtools": "^3.4.1",
-		"redux-thunk": "^2.2.0",
-		"slick-carousel": "^1.8.1"
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
