--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,15 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Debug Main Process",
-      "type": "node",
-      "request": "launch",
-      "cwd": "${workspaceRoot}",
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
-      "windows": {
-        "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
-      },
-      "args": ["."]
-    }
-  ]
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Electron Main",
+			"cwd": "${workspaceRoot}",
+			"runtimeExecutable":
+				"${workspaceFolder}/node_modules/.bin/electron",
+			"program": "${workspaceFolder}/main.js",
+			"protocol": "legacy"
+		}
+	]
 }
