--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,10 @@
 	"presets": ["env", "react", "es2015", "stage-0"],
 	"ignore": ["./react/dist/ueditor/"],
 	"plugins": [
+		"transform-runtime",
+		"transform-decorators-legacy",
 		"syntax-dynamic-import",
 		"transform-class-properties",
-		"transform-decorators-legacy",
 		"transform-es2015-arrow-functions",
 		"transform-object-rest-spread",
 		"transform-remove-strict-mode",
