--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
 	"description": "inwewallet",
 	"main": "main.js",
 	"scripts": {
-		"dev":
-			"concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"cross-env NODE_ENV=production webpack --watch\"",
+		"dev": "concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"cross-env NODE_ENV=production webpack --watch\"",
 		"compile": "webpack --config webpack.config.js --progress --profile",
 		"watch": "webpack --watch",
-		"postinstall":
-			"electron-builder install-app-dep && webpack  --progress --profile --config webpack.dll.config.js",
+		"postinstall": "electron-builder install-app-dep && webpack  --progress --profile --config webpack.dll.config.js",
 		"pack": "electron-builder --dir",
 		"dist": "webpack --config webpack.dll.config.js && electron-builder",
-		"dist1":
-			"webpack --config webpack.dll.config.js&& webpack && electron-builder"
+		"dist1": "webpack --config webpack.dll.config.js&& webpack && electron-builder"
 	},
 	"build": {
 		"appId": "com.electron.inwecrypto",
-		"files": ["./main.js", "resources/index.html", "resources/"],
+		"files": [
+			"./main.js",
+			"resources/index.html",
+			"resources/"
+		],
 		"dmg": {
 			"contents": [
 				{
@@ -33,7 +34,10 @@
 			]
 		},
 		"linux": {
-			"target": ["AppImage", "deb"]
+			"target": [
+				"AppImage",
+				"deb"
+			]
 		},
 		"win": {
 			"target": "nsis",
@@ -83,6 +87,7 @@
 		"babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-plugin-transform-remove-strict-mode": "0.0.2",
+		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.0",
 		"babel-preset-es2015": "^6.24.1",
