--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "inwewallet",
+	"name": "InWeCrypto",
 	"version": "1.0.0",
-	"description": "inwewallet",
+	"description": "InWeCrypto",
 	"main": "main.js",
 	"scripts": {
 		"dev":
@@ -10,19 +10,30 @@
 		"watch": "webpack --watch",
 		"postinstall":
 			"electron-builder install-app-dep && webpack  --progress --profile --config webpack.dll.config.js",
-		"pack": "electron-builder --dir",
-		"dist":
-			"webpack --config webpack.dll.config.js&& webpack && electron-builder"
+		"pack:mac": "electron-builder --win",
+		"pack:win": "electron-builder --darwin",
+		"pack": "electron-builder -mw",
+		"pack:all":
+			"webpack --config webpack.dll.config.js&& webpack && electron-builder -mw"
 	},
+	"release": "build",
 	"build": {
-		"appId": "com.electron.inwecrypto",
-		"copyright": "InWe",
+		"productName": "InWeCrypto",
+		"appId": "com.raistone.inwecrypto",
+		"copyright": "©InWeCrypto 2018",
 		"files": ["./main.js", "resources/index.html", "resources/"],
 		"mac": {
 			"icon": "./favicon.icns"
 		},
+		"publish": [
+			{
+				"provider": "generic",
+				"url":
+					"https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
+			}
+		],
 		"dmg": {
-			"title": "InWeWallet",
+			"title": "InWeCrypto",
 			"icon": "./favicon.icns",
 			"contents": [
 				{
@@ -42,7 +53,7 @@
 		},
 		"win": {
 			"target": "nsis",
-			"icon": "/favicon.ico"
+			"icon": "./favicon.ico"
 		}
 	},
 	"dependencies": {
@@ -52,7 +63,10 @@
 		"concurrently": "^3.5.1",
 		"dsmorse-gridster": "^0.7.0",
 		"echarts": "^3.8.5",
+
+		"electron-log": "^2.2.14",
 		"electron-packager": "^10.1.2",
+		"electron-updater": "2.20.2",
 		"flux-standard-action": "^2.0.0",
 		"history": "^4.7.2",
 		"i18next": "^10.2.2",
@@ -76,7 +90,8 @@
 		"redux": "^3.7.2",
 		"redux-actions": "^2.2.1",
 		"redux-devtools": "^3.4.1",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"url": "^0.11.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
@@ -100,7 +115,8 @@
 		"copy-webpack-plugin": "^4.4.2",
 		"cross-env": "^5.0.1",
 		"css-loader": "^0.28.5",
-		"electron-builder": "^19.31.1",
+		"electron": "^1.8.4",
+		"electron-builder": "^20.6.2",
 		"electron-devtools-installer": "^2.2.3",
 		"electron-packager": "^10.1.2",
 		"electron-prebuilt": "^1.4.13",
