--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev":
 			"concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
-		"compile": "webpack --config webpack.config.js --progress --profile",
+		"compile":
+			"webpack --config webpack.dll.config.js --progress --profile",
 		"watch": "webpack --watch",
 		"postinstall": "webpack --config webpack.dll.config.js",
 		"pack:mac": "webpack &&electron-builder --win",
