--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
 	"name": "InWeCrypto",
-	"version": "1.0.18",
+	"version": "1.0.22",
 	"description": "InWeCrypto",
 	"main": "main.js",
 	"scripts": {
-		"dev":
-			"concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
-		"compile":
-			"webpack --config webpack.dll.config.js --progress --profile",
+		"dev": "concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
+		"compile": "webpack --config webpack.dll.config.js --progress --profile",
 		"watch": "webpack --watch",
 		"postinstall": "webpack --config webpack.dll.config.js",
 		"pack:mac": "webpack &&electron-builder --win",
@@ -20,15 +18,18 @@
 		"productName": "InWeCrypto",
 		"appId": "com.raistone.inwecrypto",
 		"copyright": "©InWeCrypto 2018",
-		"files": ["./main.js", "resources/index.html", "resources/"],
+		"files": [
+			"./main.js",
+			"resources/index.html",
+			"resources/"
+		],
 		"mac": {
 			"icon": "./favicon.icns"
 		},
 		"publish": [
 			{
 				"provider": "generic",
-				"url":
-					"https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
+				"url": "https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
 			}
 		],
 		"dmg": {
@@ -48,7 +49,10 @@
 			]
 		},
 		"linux": {
-			"target": ["AppImage", "deb"]
+			"target": [
+				"AppImage",
+				"deb"
+			]
 		},
 		"win": {
 			"target": "nsis",
@@ -68,11 +72,10 @@
 		"flux-standard-action": "^2.0.0",
 		"history": "^4.7.2",
 		"i18next": "^10.2.2",
-		"i18next-browser-languagedetector": "^2.1.0",
-		"i18next-xhr-backend": "^1.5.1",
 		"navigator": "^1.0.1",
 		"normalize.css": "^7.0.0",
-		"npm": "^5.7.1",
+		"npm": "^5.8.0",
+		"perfect-scrollbar": "^1.3.0",
 		"postcss-loader": "^2.0.8",
 		"react": "^16.2.0",
 		"react-css-modules": "^4.7.1",
@@ -89,6 +92,8 @@
 		"redux-actions": "^2.2.1",
 		"redux-devtools": "^3.4.1",
 		"redux-thunk": "^2.2.0",
+		"to": "^0.2.9",
+		"update": "^0.7.4",
 		"url": "^0.11.0"
 	},
 	"devDependencies": {
