--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
 	"name": "InWeCrypto",
-	"version": "1.0.22",
+	"version": "1.0.23",
 	"description": "InWeCrypto",
 	"main": "main.js",
 	"scripts": {
-		"dev": "concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
-		"compile": "webpack --config webpack.dll.config.js --progress --profile",
+		"dev":
+			"concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
+		"compile":
+			"webpack --config webpack.dll.config.js --progress --profile",
 		"watch": "webpack --watch",
 		"postinstall": "webpack --config webpack.dll.config.js",
 		"pack:mac": "webpack &&electron-builder --win",
@@ -18,18 +20,15 @@
 		"productName": "InWeCrypto",
 		"appId": "com.raistone.inwecrypto",
 		"copyright": "©InWeCrypto 2018",
-		"files": [
-			"./main.js",
-			"resources/index.html",
-			"resources/"
-		],
+		"files": ["./main.js", "resources/index.html", "resources/"],
 		"mac": {
 			"icon": "./favicon.icns"
 		},
 		"publish": [
 			{
 				"provider": "generic",
-				"url": "https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
+				"url":
+					"https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
 			}
 		],
 		"dmg": {
@@ -49,10 +48,7 @@
 			]
 		},
 		"linux": {
-			"target": [
-				"AppImage",
-				"deb"
-			]
+			"target": ["AppImage", "deb"]
 		},
 		"win": {
 			"target": "nsis",
