--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
 	"name": "InWeCrypto",
-	"version": "1.0.23",
+	"version": "1.0.24",
 	"description": "InWeCrypto",
 	"main": "main.js",
 	"scripts": {
-		"dev":
-			"concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
-		"compile":
-			"webpack --config webpack.dll.config.js --progress --profile",
+		"dev": "concurrently \"webpack  --config webpack.config.js --progress --profile&& electron .\" \"webpack --watch\"",
+		"compile": "webpack --config webpack.dll.config.js --progress --profile",
 		"watch": "webpack --watch",
 		"postinstall": "webpack --config webpack.dll.config.js",
 		"pack:mac": "webpack &&electron-builder --win",
@@ -20,15 +18,18 @@
 		"productName": "InWeCrypto",
 		"appId": "com.raistone.inwecrypto",
 		"copyright": "©InWeCrypto 2018",
-		"files": ["./main.js", "resources/index.html", "resources/"],
+		"files": [
+			"./main.js",
+			"resources/index.html",
+			"resources/"
+		],
 		"mac": {
 			"icon": "./favicon.icns"
 		},
 		"publish": [
 			{
 				"provider": "generic",
-				"url":
-					"https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
+				"url": "https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
 			}
 		],
 		"dmg": {
@@ -48,7 +49,10 @@
 			]
 		},
 		"linux": {
-			"target": ["AppImage", "deb"]
+			"target": [
+				"AppImage",
+				"deb"
+			]
 		},
 		"win": {
 			"target": "nsis",
@@ -62,7 +66,6 @@
 		"decimal.js": "^10.0.0",
 		"dsmorse-gridster": "^0.7.0",
 		"echarts": "^3.8.5",
-		"electron-log": "^2.2.14",
 		"electron-packager": "^10.1.2",
 		"electron-updater": "^2.21.4",
 		"flux-standard-action": "^2.0.0",
