--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "InWeCrypto",
-	"version": "1.0.1",
+	"version": "1.0.30",
 	"description": "InWeCrypto",
 	"main": "main.js",
 	"scripts": {
@@ -12,7 +12,7 @@
 		"postinstall":
 			"electron-builder install-app-dep&&webpack --config webpack.dll.config.js",
 		"pack:win": "webpack &&electron-builder --win",
-		"pack:mac": "webpack &&electron-builder --darwin",
+		"pack:mac": "webpack &&electron-builder --mac",
 		"pack": "rm -rf ./dist && webpack && electron-builder -mw",
 		"pack:all": "webpack && electron-builder -mw"
 	},
@@ -29,7 +29,7 @@
 			{
 				"provider": "generic",
 				"url":
-					"https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pc-wallet/"
+					"https://inwecrypto-china.oss-cn-shanghai.aliyuncs.com/pcwallet/"
 			}
 		],
 		"dmg": {
